<!--
  ~ DSN Monitor is an app to monitor the NASA Deep Space Network in real time.
  ~ Copyright (c) 2016 Kaan Karaagacli
  ~
  ~ This file is part of DSN Monitor.
  ~
  ~ DSN Monitor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ DSN Monitor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with DSN Monitor.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">DSN Monitor</string>
    <string name="settings">Settings</string>
    <string name="target_name">%1$s (%2$s)</string>
    <string name="azimuth_angle">Azimuth: %.2f°</string>
    <string name="elevation_angle">Elevation: %.2f°</string>
    <string name="wind_speed">Wind: %s</string>
    <string name="frequency">Frequency: %s</string>
    <string name="data_rate">Data rate: %s</string>
    <string name="signal_type">%1$s: %2$s</string>
    <string name="power">Power: %s</string>
    <string name="round_trip_light_time">RTLT: %s</string>
    <string name="kilo">k</string>
    <string name="mega">M</string>
    <string name="atto">a</string>
    <string name="zepto">z</string>
    <string name="femto">f</string>
    <string name="thousand">K</string>
    <string name="million">M</string>
    <string name="billion">B</string>
    <string name="upleg_range">Upleg range: %s</string>
    <string name="downleg_range">Downleg range: %s</string>
    <string name="no_data" translatable="false">-</string>
    <string name="coordinate">%1$.2f %2$s %3$.2f %4$s</string>
    <string name="north">N</string>
    <string name="east">E</string>
    <string name="west">W</string>
    <string name="south">S</string>
    <string name="time_zone_offset">%1$s %2$02d:%3$02d</string>
    <string name="no_target">No target</string>
    <string name="dish_not_in_use">Dish not in use</string>
    <string name="mspa">MSPA: %s</string>
    <string name="array">Array: %s</string>
    <string name="ddor">DDOR: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="value_with_unit" translatable="false">%1$.2f %2$s</string>
    <string name="value_with_suffix_and_unit" translatable="false">%1$.2f%2$s %3$s</string>
    <string name="value_with_prefixed_unit" translatable="false">%1$.2f %2$s%3$s</string>
    <string name="save_success">Saved successfully</string>
    <string name="save_error">Error while saving to the file</string>
    <string name="open_error">Error while opening the file</string>
    <string name="monitor_error">Error while downloading from the server</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="monitor">Monitor</string>
    <string name="pause">Pause</string>
    <string name="history">History</string>
    <string name="download_info">Downloading\u2026\n\nYou can always open previously saved
        files or load from the history menu without an internet connection.</string>
    <string name="pin_error">Error while pinning the file</string>
    <string name="unpin_error">Error while unpinning the file</string>
    <string name="pin_description">Pin this file</string>

    <string name="help_DSCC">Deep Space Communications Complex</string>
    <string name="help_DSS">Deep Space Station</string>
    <string name="help_34M">34 meters, beam waveguide</string>
    <string name="help_34MHEF">34 meters, high efficiency</string>
    <string name="help_70M">70 meters</string>
    <string name="help_MSPA">Multiple spacecraft per aperture</string>
    <string name="help_DDOR">Delta-differential one-way ranging</string>
    <string name="help_RTLT">Round-trip light time</string>
</resources>
